End upload api, Add: Uploadcount, remove by id api
